<resources>
    <string name="app_name" translatable="false">Rawg</string>
    <string name="title_favorite" translatable="false">Favorite</string>
    <string name="image">image</string>
    <string name="rawg_ngame_database_api">Rawg\nGame Database API</string>
    <string name="games">Games</string>
    <string name="creator">Creator</string>
    <string name="profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="developed_by_love">Developed by Love</string>
    <string name="search_games_title">Search Games Title</string>
    <string name="hi">Hi</string>
    <string name="something_wrong">Something wrong!</string>
    <string name="from">from</string>
    <string name="users">Users</string>
    <string name="website">Website</string>
    <string name="platform">Platform</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t Have an Account, Register Now</string>
    <string name="input_email">Input Email</string>
    <string name="input_password">Input Password</string>
    <string name="input_name">Input Name</string>
    <string name="register">Register</string>
    <string name="back_to_login_page">Back to Login Page</string>
    <string name="please_input_name">Please Input Name!</string>
    <string name="please_input_valid_email">Please Input Valid Email</string>
    <string name="please_input_valid_password">Password Minimum 6 Character!</string>
    <string name="success_register">Success Register!</string>
    <string name="sign_in_failed">Sign In Failed!</string>
</resources>