<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="@string/rawg_ngame_database_api"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:autofillHints="no"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/outline_account_circle_24"
        android:drawablePadding="10dp"
        android:visibility="gone"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:autofillHints="no"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_alternate_email_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="@string/register"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/black3"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"/>

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/back_to_login_page"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>